--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@angular/platform-server": "^17.2.0",
     "@angular/router": "^17.2.0",
     "@angular/ssr": "^17.2.1",
+    "bcrypt": "^5.1.1",
+    "bootstrap": "^5.3.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
